05_kubernetes/03_Session3_Application_Deployment/017-ingress-the-front-door/manifests/05-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: lab017
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: http
