05_kubernetes/03_Session3_Application_Deployment/017-ingress-the-front-door/manifests/10-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: lab017
spec:
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
